--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "apollo": "vue-cli-service apollo:dev --generate-schema",
+    "apollo:schema:generate": "vue-cli-service apollo:schema:generate",
+    "apollo:schema:publish": "vue-cli-service apollo:schema:publish",
+    "apollo:start": "vue-cli-service apollo:start"
   },
   "dependencies": {
     "@fullcalendar/daygrid": "^4.4.2",
@@ -13,15 +17,21 @@
     "@fullcalendar/list": "^4.4.2",
     "@fullcalendar/timegrid": "^4.4.2",
     "@fullcalendar/vue": "^4.4.2",
-    "ant-design-vue": "^1.6.1",
+    "ant-design-vue": "^1.6.2",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
+    "auth0-js": "^9.13.2",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "graphql-type-json": "^0.2.1",
+    "lowdb": "^1.0.0",
+    "mkdirp": "^0.5.1",
+    "shortid": "^2.2.8",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
     "vue-js-modal": "^2.0.0-rc.3",
@@ -36,9 +46,12 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-alpha.5",
+    "graphql-tag": "^2.9.0",
     "prettier": "^1.19.1",
+    "vue-cli-plugin-apollo": "~0.21.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
@@ -53,8 +66,8 @@
     ],
     "parserOptions": {
       "parser": "babel-eslint"
-    },
-    "rules": {}
+    }
+
   },
   "browserslist": [
     "> 1%",
