--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graphql-type-json": "^0.2.1",
     "lowdb": "^1.0.0",
     "mkdirp": "^0.5.1",
+    "moment": "^2.26.0",
     "shortid": "^2.2.8",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
