--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "graphql-iso-date": "^3.6.1",
     "graphql-tag": "^2.10.3",
     "graphql-type-json": "^0.2.1",
+    "ics": "^2.22.1",
     "lowdb": "^1.0.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.26.0",
