--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "lowdb": "^1.0.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.26.0",
+    "passport": "^0.4.1",
+    "passport-ldapauth": "^2.1.4",
     "shortid": "^2.2.8",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
