Add auth service

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@
 LDAP_URL="ldap://localhost:10389"
 LDAP_BIND_DN_SUFFIX="ou=users,dc=example,dc=com"
 LDAP_SEARCH_BASE="ou=users,dc=example,dc=com"
+BASE_URL="http://localhost:8080"
+VUE_APP_AUTH_ENDPOINT="http://localhost:8080/api/login"
