--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,9 @@
 LDAP_URL="ldap://localhost:10389"
 LDAP_BIND_DN_SUFFIX="ou=users,dc=example,dc=com"
 LDAP_SEARCH_BASE="ou=users,dc=example,dc=com"
+HASURA_URI=https://open-classroom-hasura-test.herokuapp.com/v1/graphql
+HASURA_ADMIN_SECRET=openclassroom
+EMAIL_FROM=e0420094@u.nus.edu
+EMAIL_TO=e0420094@u.nus.edu
+SMTP_HOST=smtp.office365.com
+SMTP_PORT=587
