--- a/.env.development
+++ b/.env.development
@@ -4,5 +4,7 @@
 LDAP_URL="ldap://localhost:10389"
 LDAP_BIND_DN_SUFFIX="ou=users,dc=example,dc=com"
 LDAP_SEARCH_BASE="ou=users,dc=example,dc=com"
+LDAP_RESP_USERNAME_FIELD="cn"
 BASE_URL="http://localhost:8080"
 VUE_APP_AUTH_ENDPOINT="http://localhost:8080/api/login"
+VUE_APP_GRAPHQL_HTTP="https://open-classroom-hasura-test.herokuapp.com/v1/graphql"
