--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "stage": "env NODE_ENV=staging vue-cli-service serve",
+    "stage": "env NODE_ENV=staging vue-cli-service serve --mode staging",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
