--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
 
 # DO NOT COMMIT ANY SENSITIVE INFO HERE. 
 # For local dev, use a .env.local file, and for staging/production environment, inject sensitive env variables manually.
+VUE_APP_MODE="development"
 LDAP_URL="ldap://localhost:10389"
 LDAP_BIND_DN_SUFFIX="ou=users,dc=example,dc=com"
 LDAP_SEARCH_BASE="ou=users,dc=example,dc=com"
