--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,4 @@
+VUE_APP_MODE="staging"
 LDAP_TOKEN_EXP_DAYS="1"
 BASE_URL="https://open-classroom-app-demo.herokuapp.com/"
 VUE_APP_AUTH_ENDPOINT="https://open-classroom-app-demo.herokuapp.com/api/login"
