--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "graphql": "^15.0.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-tag": "^2.10.3",
