--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apollo-link-http": "^1.5.17",
     "auth0-js": "^9.13.2",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "connect-history-api-fallback": "^1.6.0",
