--- a/.env.staging
+++ b/.env.staging
@@ -3,9 +3,9 @@ LDAP_TOKEN_EXP_DAYS="1"
 BASE_URL="https://open-classroom-app-demo.herokuapp.com/"
 VUE_APP_AUTH_ENDPOINT="https://open-classroom-app-demo.herokuapp.com/api/login"
 VUE_APP_GRAPHQL_HTTP="https://open-classroom-hasura-test.herokuapp.com/v1/graphql"
-HASURA_URI="https://open-classroom-hasura-test.herokuapp.com/v1/graphql"
-HASURA_ADMIN_SECRET="openclassroom"
-EMAIL_FROM=e0420094@u.nus.edu
-EMAIL_TO=e0420094@u.nus.edu
-SMTP_HOST=smtp.office365.com
-SMTP_PORT=587
+VUE_APP_HASURA_URI="https://open-classroom-hasura-test.herokuapp.com/v1/graphql"
+VUE_APP_HASURA_ADMIN_SECRET="openclassroom"
+VUE_APP_EMAIL_FROM=e0420094@u.nus.edu
+VUE_APP_EMAIL_TO=e0420094@u.nus.edu
+VUE_APP_SMTP_HOST=smtp.office365.com
+VUE_APP_SMTP_PORT=587
