--- a/.env.staging
+++ b/.env.staging
@@ -9,3 +9,4 @@ EMAIL_FROM=e0420094@u.nus.edu
 EMAIL_TO=e0420094@u.nus.edu
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
+VUE_APP_SEMESTER_CODE="AY2021-1"
