data analytics for profile page

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "chart.js": "^2.9.3",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
@@ -48,6 +49,7 @@
     "shortid": "^2.2.8",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
+    "vue-chartjs": "^3.5.0",
     "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.3.2",
     "vue-sidebar-menu": "^4.5.4",
