Add staging-test. Use VUE_APP_MODE instead of NODE_ENV. Clean up.

--- a/.env.staging
+++ b/.env.staging
@@ -1,11 +1,11 @@
+NODE_ENV="staging"
 VUE_APP_MODE="staging"
 LDAP_TOKEN_EXP_DAYS="1"
 BASE_URL="https://open-classroom-app-demo.herokuapp.com/"
 VUE_APP_BASE_URL=https://open-classroom-app-demo.herokuapp.com/
 VUE_APP_AUTH_ENDPOINT="https://open-classroom-app-demo.herokuapp.com/api/login"
 VUE_APP_GRAPHQL_HTTP="https://open-classroom-hasura-test.herokuapp.com/v1/graphql"
-HASURA_URI=https://open-classroom-hasura-test.herokuapp.com/v1/graphql
-EMAIL_FROM=e0420094@u.nus.edu
+EMAIL=e0420094@u.nus.edu
 EMAIL_TO=e0420094@u.nus.edu
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
