--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "stage": "env NODE_ENV=staging vue-cli-service serve --mode staging",
+    "stage": "env vue-cli-service serve --mode staging",
     "serve": "vue-cli-service serve --mode development",
-    "build": "vue-cli-service build --mode staging",
+    "build": "vue-cli-service build",
+    "build-staging": "vue-cli-service build --mode staging",
+    "build-staging-test": "vue-cli-service build --mode staging-test",
     "lint": "vue-cli-service lint",
     "apollo": "vue-cli-service apollo:dev --generate-schema",
     "apollo:schema:generate": "vue-cli-service apollo:schema:generate",
