--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "stage": "env vue-cli-service serve --mode staging",
     "serve": "vue-cli-service serve --mode development",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --mode staging",
     "build-staging": "vue-cli-service build --mode staging",
     "build-staging-test": "vue-cli-service build --mode staging-test",
     "serve-staging-test":"sudo DEBUG=express:* VUE_APP_MODE=staging-test node index.js 2>&1 | tee './logs/deployment_$(date +'%d_%m__%H_%M').log'",
