--- a/.env.staging-test
+++ b/.env.staging-test
@@ -4,9 +4,9 @@ LDAP_URL="ldap://localhost:10389"
 LDAP_BIND_DN_SUFFIX="ou=users,dc=example,dc=com"
 LDAP_SEARCH_BASE="ou=users,dc=example,dc=com"
 LDAP_RESP_USERNAME_FIELD="cn"
-BASE_URL="https://172.25.20.25/8080"
-VUE_APP_BASE_URL="https://172.25.20.25/8080"
-VUE_APP_AUTH_ENDPOINT="https://172.25.20.25/8080/api/login"
+BASE_URL="http://172.25.20.25/8080"
+VUE_APP_BASE_URL="http://172.25.20.25/8080"
+VUE_APP_AUTH_ENDPOINT="http://172.25.20.25/8080/api/login"
 VUE_APP_GRAPHQL_HTTP="https://open-classroom-hasura-test.herokuapp.com/v1/graphql"
 EMAIL=e0420094@u.nus.edu
 EMAIL_TO=e0420094@u.nus.edu
