--- a/.env.staging-test
+++ b/.env.staging-test
@@ -1,8 +1,7 @@
 VUE_APP_MODE="staging-test"
 LDAP_TOKEN_EXP_DAYS="1"
-LDAP_URL="ldap://localhost:10389"
-LDAP_BIND_DN_SUFFIX="ou=users,dc=example,dc=com"
-LDAP_SEARCH_BASE="ou=users,dc=example,dc=com"
+LDAP_URL="ldap://ldapstf.nus.edu.sg:389"
+LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="cn"
 BASE_URL="http://172.25.20.25:8080"
 VUE_APP_BASE_URL="http://172.25.20.25:8080"
@@ -12,4 +11,3 @@ EMAIL=e0420094@u.nus.edu
 EMAIL_TO=e0420094@u.nus.edu
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
-VUE_APP_SEMESTER_CODE="AY2021-1"
