Change user object field. Add logging for login API.

--- a/.env.staging-test
+++ b/.env.staging-test
@@ -2,7 +2,7 @@ VUE_APP_MODE="staging-test"
 LDAP_TOKEN_EXP_DAYS="1"
 LDAP_URL="ldap://ldapstf.nus.edu.sg:389"
 LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
-LDAP_RESP_USERNAME_FIELD="cn"
+LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 BASE_URL="http://172.25.20.25:8080"
 VUE_APP_BASE_URL="http://172.25.20.25:8080"
 VUE_APP_AUTH_ENDPOINT="http://172.25.20.25:8080/api/login"
