--- a/.env.production
+++ b/.env.production
@@ -1,13 +1,13 @@
-VUE_APP_MODE="staging-test"
+VUE_APP_MODE="production"
 LDAP_TOKEN_EXP_DAYS="1"
 LDAP_URL="ldap://ldapstf.nus.edu.sg:389"
 LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 BASE_URL="http://localhost:443"
 VUE_APP_BASE_URL="http://localhost:443"
-VUE_APP_AUTH_ENDPOINT="http://localhost:443/api/login"
-VUE_APP_GRAPHQL_HTTP="https://localhost:4430/v1/graphql"
-EMAIL=e0420094@u.nus.edu
-EMAIL_TO=e0420094@u.nus.edu
+VUE_APP_AUTH_ENDPOINT="http://localhost:8080/api/login"
+VUE_APP_GRAPHQL_HTTP="https://localhost:8080/v1/graphql"
+EMAIL=yncbx146@u.nus.edu
+EMAIL_TO=""
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
