--- a/.env.staging-test
+++ b/.env.staging-test
@@ -3,10 +3,10 @@ LDAP_TOKEN_EXP_DAYS="1"
 LDAP_URL="ldap://ldapstf.nus.edu.sg:389"
 LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
-BASE_URL="http://172.25.20.25:8080"
-VUE_APP_BASE_URL="http://172.25.20.25:8080"
-VUE_APP_AUTH_ENDPOINT="http://172.25.20.25:8080/api/login"
-VUE_APP_GRAPHQL_HTTP="https://open-classroom-hasura-test.herokuapp.com/v1/graphql"
+BASE_URL="http://localhost:443"
+VUE_APP_BASE_URL="http://localhost:443"
+VUE_APP_AUTH_ENDPOINT="http://localhost:8080/api/login"
+VUE_APP_GRAPHQL_HTTP="https://localhost:8080/v1/graphql"
 EMAIL=e0420094@u.nus.edu
 EMAIL_TO=e0420094@u.nus.edu
 SMTP_HOST=smtp.office365.com
