--- a/.env.staging-test
+++ b/.env.staging-test
@@ -5,9 +5,9 @@ LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 BASE_URL="http://localhost:443"
 VUE_APP_BASE_URL="http://localhost:443"
-VUE_APP_AUTH_ENDPOINT="http://localhost:443/api/login"
+VUE_APP_AUTH_ENDPOINT="http://localhost:8080/api/login"
 VUE_APP_GRAPHQL_HTTP="https://localhost:8080/v1/graphql"
-EMAIL=e0420094@u.nus.edu
-EMAIL_TO=e0420094@u.nus.edu
+EMAIL=yncbx153@u.nus.edu
+EMAIL_TO=e0032399@u.nus.edu
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
