--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "scripts": {
     "stage": "env vue-cli-service serve --mode staging",
     "serve": "vue-cli-service serve --mode development",
+    "serve-development-node":"DEBUG=express:* VUE_APP_MODE=development VUE_APP_BASE_URL=http://localhost:443 node index.js",
     "serve-staging": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build --mode staging",
+    "build-development": "vue-cli-service build --mode development",
     "build-staging": "vue-cli-service build --mode staging",
     "build-staging-test": "vue-cli-service build --mode staging-test",
-    "serve-staging-test":"sudo DEBUG=express:* VUE_APP_MODE=staging-test node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
+    "serve-staging-test":"sudo DEBUG=express:* VUE_APP_MODE=staging-test VUE_APP_BASE_URL=http://172.25.20.25:443 node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
     "lint": "vue-cli-service lint",
     "apollo": "vue-cli-service apollo:dev --generate-schema",
     "apollo:schema:generate": "vue-cli-service apollo:schema:generate",
