Reorder npm commands.

--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "stage": "env vue-cli-service serve --mode staging",
-    "serve": "vue-cli-service serve --mode development",
-    "serve-development-node":"DEBUG=express:* VUE_APP_MODE=development VUE_APP_BASE_URL=http://localhost:443 node index.js",
-    "serve-staging": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build --mode staging",
     "build-development": "vue-cli-service build --mode development",
     "build-staging": "vue-cli-service build --mode staging",
     "build-staging-test": "vue-cli-service build --mode staging-test",
-    "serve-staging-test":"sudo DEBUG=express:* VUE_APP_MODE=staging-test VUE_APP_BASE_URL=http://172.25.20.25:443 node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
+    "build-production": "vue-cli-service build --mode production",
+    "serve": "vue-cli-service serve --mode staging",
+    "serve-development-node":"DEBUG=express:* VUE_APP_MODE=development node index.js",
+    "serve-staging": "vue-cli-service serve --mode staging",
+    "serve-staging-node": "DEBUG=express:* VUE_APP_MODE=staging node index.js",
+    "serve-staging-test":"sudo DEBUG=express:* VUE_APP_MODE=staging-test node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
+    "serve-production": "sudo DEBUG=express:* VUE_APP_MODE=production node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
     "lint": "vue-cli-service lint",
     "apollo": "vue-cli-service apollo:dev --generate-schema",
     "apollo:schema:generate": "vue-cli-service apollo:schema:generate",
