--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "vue-cli-service build --mode staging",
     "build-development": "vue-cli-service build --mode development",
     "build-staging": "vue-cli-service build --mode staging",
-    "build-staging-test": "vue-cli-service build --mode staging-test",
-    "build-production": "vue-cli-service build --mode production",
+    "build-staging-test": "NODE_ENV=production vue-cli-service build --mode staging-test",
+    "build-production": "NODE_ENV=production vue-cli-service build --mode production",
     "serve": "vue-cli-service serve --mode staging",
     "serve-development-node":"DEBUG=express:* VUE_APP_MODE=development node index.js",
     "serve-staging": "vue-cli-service serve --mode staging",
