--- a/.env.production
+++ b/.env.production
@@ -3,8 +3,8 @@ LDAP_TOKEN_EXP_DAYS="1"
 LDAP_URL="ldap://ldapstf.nus.edu.sg:389"
 LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
-VUE_APP_BASE_URL="http://localhost:443"
-VUE_APP_AUTH_ENDPOINT="http://localhost:8080/api/login"
+VUE_APP_BASE_URL="http://<>:443"
+VUE_APP_AUTH_ENDPOINT="http://<>:443/api/login"
 VUE_APP_GRAPHQL_HTTP="https://localhost:8080/v1/graphql"
 EMAIL=yncbx153@u.nus.edu
 EMAIL_TO=""
