Add GRAPHQL_HTTP to CSP, explicitly define in env instead of localhost.

--- a/.env.staging-test
+++ b/.env.staging-test
@@ -5,7 +5,7 @@ LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 VUE_APP_BASE_URL="http://172.25.20.25:443"
 VUE_APP_AUTH_ENDPOINT="http://172.25.20.25:443/api/login"
-VUE_APP_GRAPHQL_HTTP="https://localhost:8080/v1/graphql"
+VUE_APP_GRAPHQL_HTTP="https://172.25.20.25:8080/v1/graphql"
 EMAIL=yncbx153@u.nus.edu
 EMAIL_TO=e0032399@u.nus.edu
 SMTP_HOST=smtp.office365.com
