--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 VUE_APP_BASE_URL="http://<>:443"
 VUE_APP_AUTH_ENDPOINT="http://<>:443/api/login"
-VUE_APP_GRAPHQL_HTTP="https://localhost:8080/v1/graphql"
+VUE_APP_GRAPHQL_HTTP="https://<>:8080/v1/graphql"
 EMAIL=yncbx153@u.nus.edu
 EMAIL_TO=""
 SMTP_HOST=smtp.office365.com
