--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vue-cli-service build --mode staging",
     "build-staging": "vue-cli-service build --mode staging",
     "build-staging-test": "vue-cli-service build --mode staging-test",
-    "serve-staging-test":"sudo DEBUG=express:* VUE_APP_MODE=staging-test node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
+    "serve-staging-test": "sudo DEBUG=express:* VUE_APP_MODE=staging-test node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
     "lint": "vue-cli-service lint",
     "apollo": "vue-cli-service apollo:dev --generate-schema",
     "apollo:schema:generate": "vue-cli-service apollo:schema:generate",
@@ -50,13 +50,16 @@
     "nodemailer": "^6.4.10",
     "passport": "^0.4.1",
     "passport-ldapauth": "^2.1.4",
+    "rxjs": "^6.6.2",
     "shortid": "^2.2.8",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
     "vue-chartjs": "^3.5.0",
     "vue-js-modal": "^2.0.0-rc.3",
     "vue-router": "^3.3.2",
+    "vue-rx": "^6.2.0",
     "vue-sidebar-menu": "^4.5.4",
+    "vuejs-clipper": "^3.0.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -70,7 +73,9 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-alpha.5",
     "graphql-tag": "^2.9.0",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
+    "sass-loader": "^10.0.1",
     "vue-cli-plugin-apollo": "~0.21.3",
     "vue-template-compiler": "^2.6.11"
   },
