--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build-staging": "vue-cli-service build --mode staging",
     "build-staging-test": "vue-cli-service build --mode staging-test --no-unsafe-inline",
     "build-production": "vue-cli-service build --mode production --no-unsafe-inline",
-    "serve": "vue-cli-service serve --mode staging --port 443",
+    "serve": "vue-cli-service serve --mode staging",
     "serve-development-node": "DEBUG=express:* VUE_APP_MODE=development node index.js",
-    "serve-staging": "vue-cli-service serve --mode staging --port 443",
+    "serve-staging": "vue-cli-service serve --mode staging",
     "serve-staging-node": "DEBUG=express:* VUE_APP_MODE=staging node index.js",
     "serve-staging-test": "sudo DEBUG=express:* VUE_APP_MODE=staging-test node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
     "serve-production": "sudo DEBUG=express:* VUE_APP_MODE=production node index.js 2>&1 | tee \"./logs/deployment_$(date +'%d_%m__%H_%M').log\" &",
