correct typo in env file url path

--- a/.env.production
+++ b/.env.production
@@ -6,8 +6,8 @@ LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 VUE_APP_BASE_URL="http://172.25.20.77:83"
 VUE_APP_BASE_URL_LOCALHOST="http://localhost:83"
-VUE_APP_AUTH_ENDPOINT="http:///172.25.20.77:83/api/login"
-VUE_APP_GRAPHQL_HTTP="http:///172.25.20.77:8080/v1/graphql"
+VUE_APP_AUTH_ENDPOINT="http://172.25.20.77:83/api/login"
+VUE_APP_GRAPHQL_HTTP="http://172.25.20.77:8080/v1/graphql"
 EMAIL=yncbx153@u.nus.edu
 EMAIL_TO=""
 SMTP_HOST=smtp.office365.com
