Update base url localhost

--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ LDAP_URL="ldap://ldapstf.nus.edu.sg:389"
 LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 VUE_APP_BASE_URL="https://openclassroom.yale-nus.edu.sg"
-VUE_APP_BASE_URL_LOCALHOST="https://localhost:83"
+VUE_APP_BASE_URL_LOCALHOST="https://openclassroom.yale-nus.edu.sg"
 VUE_APP_AUTH_ENDPOINT="https://openclassroom.yale-nus.edu.sg/api/login"
 VUE_APP_GRAPHQL_HTTP="https://hasura.yale-nus.edu.sg:440/v1/graphql"
 EMAIL=yncbx153@u.nus.edu
