Update graphql endpoint

--- a/.env.production
+++ b/.env.production
@@ -7,7 +7,7 @@ LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 VUE_APP_BASE_URL="https://openclassroom.yale-nus.edu.sg"
 VUE_APP_BASE_URL_LOCALHOST="https://openclassroom.yale-nus.edu.sg"
 VUE_APP_AUTH_ENDPOINT="https://openclassroom.yale-nus.edu.sg/api/login"
-VUE_APP_GRAPHQL_HTTP="https://hasura.yale-nus.edu.sg:440/v1/graphql"
+VUE_APP_GRAPHQL_HTTP="https://hasura.yale-nus.edu.sg"
 EMAIL=yncbx153@u.nus.edu
 EMAIL_TO=""
 SMTP_HOST=smtp.office365.com
