--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,7 @@ VUE_APP_BASE_URL="https://openclassroom.yale-nus.edu.sg"
 VUE_APP_BASE_URL_LOCALHOST="https://openclassroom.yale-nus.edu.sg"
 VUE_APP_AUTH_ENDPOINT="https://openclassroom.yale-nus.edu.sg/api/login"
 VUE_APP_GRAPHQL_HTTP="https://hasura.yale-nus.edu.sg/v1/graphql"
-EMAIL=yncbx153@u.nus.edu
+EMAIL=yncbx146@nus.edu.sg
 EMAIL_TO=""
 SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
